<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>Naukri-Cucumber-Automation</groupId>
    <artifactId>Naukri-Cucumber-Automation</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Naukri-Cucumber-Automation</name>
    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jackson.version>2.9.8</jackson.version>
        <selenium.version>3.14.0</selenium.version>
        <cucumber.version>4.3.0</cucumber.version>
        <testNG.version>6.14.3</testNG.version>
        <testPlan>default</testPlan>
        <publishTestExecution>default</publishTestExecution>
        <browser>default</browser>
        <testEnvironment>default</testEnvironment>
        <!--<browserThreadCount>default</browserThreadCount> -->
        <testExecutionOwner>default</testExecutionOwner>
        <projectKey>default</projectKey>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-email</artifactId>
            <version>1.5</version>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.8.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4.7</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>javax.mail-api</artifactId>
            <version>1.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.10</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>3.0.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.18</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka_2.12</artifactId>
            <version>2.3.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.lightbody.bmp/browsermob-core -->
        <dependency>
            <groupId>net.lightbody.bmp</groupId>
            <artifactId>browsermob-core</artifactId>
            <version>2.1.5</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.11</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
        <dependency>
            <groupId>org.apache.xmlbeans</groupId>
            <artifactId>xmlbeans</artifactId>
            <version>2.6.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml-schemas</artifactId>
            <version>3.11</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-scratchpad</artifactId>
            <version>3.11</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.11</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
		
        <dependency>
            <groupId>org.dbunit</groupId>
            <artifactId>dbunit</artifactId>
            <version>2.5.3</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <excludeDefaultDirectories>true</excludeDefaultDirectories>
                    <filesets>
                        <fileset>
                            <directory>target</directory>
                            <directory>test-output</directory>
                            <includes>
                                <include>**</include>
                            </includes>
                            <excludes>
                                <exclude>cucumber-reports</exclude>
                            </excludes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
            <!-- <plugin> <groupId>com.github.temyers</groupId> <artifactId>cucumber-jvm-parallel-plugin</artifactId> 
            <version>5.0.0</version> <executions> <execution> <id>generateRunners</id> 
            <phase>generate-test-sources</phase> <goals> <goal>generateRunners</goal> 
            </goals> <configuration> Mandatory List of package names to scan for glue 
            code. <glue> <package>com.naukri.stepdefinitions</package> </glue> These 
            are optional, with the default values Where to output the generated tests 
            <outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory> 
            The directory, which must be in the root of the runtime classpath, containing 
            your feature files. <featuresDirectory>src\test\java\com\naukri\features\Referral\</featuresDirectory> 
            Directory where the cucumber report files shall be written <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir> 
            <cucumberOutputDir>target</cucumberOutputDir> List of cucumber plugins. When 
            none are provided the json formatter is used. For more advanced usage see 
            section about configuring cucumber plugins <plugins> <plugin> <name>json</name> 
            <outputDirectory>${project.build.directory}/cucumber-parallel/json</outputDirectory> 
            </plugin> </plugins> CucumberOptions.strict property <strict>true</strict> 
            CucumberOptions.monochrome property <monochrome>true</monochrome> The tags 
            to run, maps to CucumberOptions.tags property. Default is no tags. <tags> 
            <tag>${tags}</tag> </tags> Generate TestNG runners instead of JUnit ones. 
            <useTestNG>true</useTestNG> The naming scheme to use for the generated test 
            classes. One of 'simple' or 'feature-title' <namingScheme>pattern</namingScheme> 
            The class naming pattern to use. Only required/used if naming scheme is 'pattern'. 
            <namingPattern>{f}{c}BDDTest</namingPattern> One of [SCENARIO, FEATURE]. 
            SCENARIO generates one runner per scenario. FEATURE generates a runner per 
            feature. <parallelScheme>SCENARIO</parallelScheme> <customVmTemplate>./custom-runner-template.java.vm</customVmTemplate> 
            </configuration> </execution> </executions> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
            <artifactId>maven-surefire-plugin</artifactId> <version>2.21.0</version> 
            <configuration> # used for running tests ( created using cucumber-jvm-parallel 
            plugin ) in parallel using forkCount and reuseForks <forkCount>1</forkCount> 
            <reuseForks>false</reuseForks> <threadCount>2</threadCount> <parallel>classes</parallel> 
            <argLine>-Duser.language=en</argLine> <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> 
            <argLine>-Dfile.encoding=UTF-8</argLine> <skip>false</skip> </configuration> 
            <executions> <execution> <id>default-test</id> <configuration> <skipTests>true</skipTests> 
            </configuration> </execution> <execution> <id>feature-test-run</id> <goals> 
            <goal>test</goal> </goals> <phase>test</phase> <configuration> <includes> 
            <include>**/*BDDTest.class</include> </includes> </configuration> </execution> 
            </executions> </plugin> -->
        </plugins>
    </build>
</project>